feat: added branding settings area
