# modules/api/src/app.routes.ts
@@ -7,6 +7,7 @@ import { LocationsModule } from './routes/locations/locations.module';
 import { AreasModule } from './routes/areas/areas.module';
 import { InventoryModule } from './routes/inventory/inventory.module';
 import { AuditLogsModule } from './routes/audit-logs/audit-logs.module';
+import { BrandingModule } from './routes/branding/branding.module';
 
 /**
  * Application routes configuration
@@ -45,5 +46,9 @@ export const routes: Routes = [
   {
     path: 'audit-logs',
     module: AuditLogsModule,
+  },
+  {
+    path: 'branding',
+    module: BrandingModule,
   },
 ];
